# synthetic-driving-profile-generator

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
config/: default.yaml
data/: README.md
docs/: activity_generation_plan.md  activity_validation_investigation.md  charging_demand_plan.md  clustering_plan.md  data_requirements.md  ev_tool_charging_integration.md  feature_engineering_plan.md  methodology.md  model_status.md  nhts_datasetanalysis_assessment.md  profile_based_generation_plan.md  profile_based_test_results.md  synthetic_generation_plan.md  validation_plan.md  validation_results.md
notebooks/: 01_explore_nhts_2022.ipynb
scripts/: demo_ev_tool_charging.py  run_ev_tool_charging.py  run_pipeline.py  run_profile_based_test.py
src/driving_profiles/: __init__.py
src/driving_profiles/data/: clean.py  download.py  ingest.py
src/driving_profiles/features/: build_features.py  cluster.py
tests/: test_activity.py  test_build_features.py  test_charging_demand.py  test_clean.py  test_cluster.py  test_download.py  test_ev_tool_charging.py  test_export_excel.py  test_generator.py  test_ingest.py  test_profile_adapter.py  test_profile_based.py  test_run_pipeline.py  test_run_profile_based_test.py  test_time_utils.py  test_validation_activity.py  test_validation_clusters.py  test_validation_common.py  test_validation_missingness.py  test_validation_population.py  test_validation_profile_based.py  test_validation_report.py
webapp/: .gitignore  README.md  app.py  index.html  pipeline.py  requirements.txt
webapp/nhts_generator/: Driving_Profile_Probability_Tables.csv  archetype_params.json  income_based_vehicle_type_probabilities.csv  worker_household_income_distribution.csv
(+24 files in other folders)
