[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driving-profiles"
version = "0.1.0"
description = "Synthetic employee driving profile generator using NHTS 2022 data, for workplace EV charging demand estimation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD - see LICENSE" }
authors = [
    { name = "TODO: add author(s)" },
]

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "scikit-learn>=1.4",
    "pyarrow>=15.0",
    "scipy>=1.11",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
